--- a/style.css
+++ b/style.css
@@ -35,8 +35,16 @@ h5,h6,p,a,li,ol{
     width: 100%;
     height: 100vh;
     position: relative;
+    z-index: 99999;
 }
-
+#banner::after{
+    position: absolute;
+    content: '';
+    background-color: rgba(17, 17, 17, 0.658);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
 .banner-text h1{
     position: absolute;
     width: 800px;
