--- a/style.css
+++ b/style.css
@@ -26,24 +26,12 @@ h5,h6,p,a,li,ol{
 
 
 /* banner css start*/
-
-#banner{
-    background: url(/images/donation0.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.banner-1 img{
+    position: relative;
     width: 100%;
     height: 100vh;
-    position: relative;
-    z-index: 99999;
-}
-#banner::after{
-    position: absolute;
-    content: '';
-    background-color: rgba(17, 17, 17, 0.658);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+
+    
 }
 .banner-text h1{
     position: absolute;
